--- a/notebooks/hook_scripts/schnet_representation_extracter-X_dipole.ipynb
+++ b/notebooks/hook_scripts/schnet_representation_extracter-X_dipole.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,49 +115,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\aelsamma\\Anaconda3\\lib\\site-packages\\schnetpack\\data\\atoms.py:327: UserWarning: The given NumPy array is not writeable, and PyTorch does not support non-writeable tensors. This means you can write to the underlying (supposedly non-writeable) NumPy array using the tensor. You may want to copy the array to protect its data or make it writeable before converting it to a tensor. This type of warning will be suppressed for the rest of this program. (Triggered internally at  ..\\torch\\csrc\\utils\\tensor_numpy.cpp:143.)\n",
+      "  properties[pname] = torch.FloatTensor(prop)\n",
+      "C:\\Users\\aelsamma\\Anaconda3\\lib\\site-packages\\ase\\atoms.py:967: VisibleDeprecationWarning: Use get_global_number_of_atoms() instead\n",
+      "  warnings.warn('Use get_global_number_of_atoms() instead',\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "None\n",
-      "9\n",
-      "C -0.017489549 1.2893138 0.0070837247\n",
-      "C 0.0021349336 -0.16746153 -0.00095350837\n",
-      "N 0.018049099 -1.3223433 -0.007233838\n",
-      "H 1.0024261 1.6830851 -0.0005753772\n",
-      "H -0.54359174 1.6669849 -0.873784\n",
-      "H -0.5266811 1.6573676 0.9018339\n",
+      "0\n",
+      "C -2.8340169e-06 2.3049886e-06 -1.4378233e-07\n",
+      "H 0.014845718 -1.0918331 -0.0060250196\n",
+      "H 1.0244261 0.3779494 -0.007724565\n",
+      "H -0.52811974 0.36172476 -0.88464487\n",
+      "H -0.5111183 0.3521308 0.89839613\n",
       "\n",
-      "Prediction: 0.79049164\n",
+      "Prediction: -0.0033174977\n",
       "Keys: ['_atomic_numbers', '_positions', '_cell', '_neighbors', '_cell_offset', '_atom_mask', '_neighbor_mask', 'representation']\n",
-      "Truth: 0.79667646\n"
-     ]
-    },
-    {
-     "ename": "RuntimeError",
-     "evalue": "Can't call numpy() on Tensor that requires grad. Use tensor.detach().numpy() instead.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-31-d59a7b071c71>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     85\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnumber_of_atoms\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     86\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mprops\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'_atomic_numbers'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 87\u001b[0;31m             \u001b[0mdatahae\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvstack\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdatahae\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0myi\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     88\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnumber_of_atoms\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     89\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mprops\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'_atomic_numbers'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m8\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<__array_function__ internals>\u001b[0m in \u001b[0;36mvstack\u001b[0;34m(*args, **kwargs)\u001b[0m\n",
-      "\u001b[0;32m~/Programs/anaconda3/lib/python3.7/site-packages/numpy/core/shape_base.py\u001b[0m in \u001b[0;36mvstack\u001b[0;34m(tup)\u001b[0m\n\u001b[1;32m    278\u001b[0m         \u001b[0;31m# raise warning if necessary\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    279\u001b[0m         \u001b[0m_arrays_for_stack_dispatcher\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtup\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstacklevel\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 280\u001b[0;31m     \u001b[0marrs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0matleast_2d\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mtup\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    281\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0marrs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    282\u001b[0m         \u001b[0marrs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0marrs\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<__array_function__ internals>\u001b[0m in \u001b[0;36matleast_2d\u001b[0;34m(*args, **kwargs)\u001b[0m\n",
-      "\u001b[0;32m~/Programs/anaconda3/lib/python3.7/site-packages/numpy/core/shape_base.py\u001b[0m in \u001b[0;36matleast_2d\u001b[0;34m(*arys)\u001b[0m\n\u001b[1;32m    121\u001b[0m     \u001b[0mres\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    122\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mary\u001b[0m \u001b[0;32min\u001b[0m \u001b[0marys\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 123\u001b[0;31m         \u001b[0mary\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0masanyarray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mary\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    124\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mary\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mndim\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    125\u001b[0m             \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mary\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreshape\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/Programs/anaconda3/lib/python3.7/site-packages/numpy/core/_asarray.py\u001b[0m in \u001b[0;36masanyarray\u001b[0;34m(a, dtype, order)\u001b[0m\n\u001b[1;32m    136\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    137\u001b[0m     \"\"\"\n\u001b[0;32m--> 138\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcopy\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0morder\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0morder\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msubok\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    139\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    140\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/Programs/anaconda3/lib/python3.7/site-packages/torch/tensor.py\u001b[0m in \u001b[0;36m__array__\u001b[0;34m(self, dtype)\u001b[0m\n\u001b[1;32m    628\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mhandle_torch_function\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mTensor\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__array__\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrelevant_args\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdtype\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    629\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mdtype\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 630\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnumpy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    631\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    632\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnumpy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mastype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdtype\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcopy\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mRuntimeError\u001b[0m: Can't call numpy() on Tensor that requires grad. Use tensor.detach().numpy() instead."
+      "Truth: 0.0\n",
+      "[-0.12051509]\n",
+      "[[[ 1.5303171e-03 -1.3085578e-01 -9.6424075e-04]\n",
+      "  [ 2.0532962e-04 -5.7589239e-04  1.8868723e-04]\n",
+      "  [ 9.6604437e-02  1.3976531e-01  2.6408561e-05]\n",
+      "  [-5.1640589e-02  1.3821939e-01 -8.3707727e-02]\n",
+      "  [-5.0016992e-02  1.3730277e-01  8.6548470e-02]]]\n",
+      "tensor([[-0.0033,  0.2839,  0.0021]], grad_fn=<SumBackward1>)\n",
+      "{'dipole_moment': tensor([[-0.0033,  0.2839,  0.0021]], grad_fn=<SumBackward1>)}\n",
+      "[0.13086828 0.00063986 0.1699022  0.16964178 0.16983636]\n"
      ]
     }
    ],
    "source": [
-    "checkpoint_path = '../../../../data/trained_models/qm9_dipole_trained_1000_500/trained.pth'\n",
-    "split_file ='../../../../data/trained_models/qm9_dipole_trained_1000_500/split.npz'\n",
-    "model_file = \"../../../../data/trained_models/qm9_dipole_trained_1000_500/best_model\"\n",
+    "checkpoint_path = '../../../../data/trained_models/qm9_dipole_trained/trained.pth'\n",
+    "split_file ='../../../../data/trained_models/qm9_dipole_trained/split.npz'\n",
+    "model_file = \"../../../../data/trained_models/qm9_dipole_trained/best_model\"\n",
     "number_of_inputs = 5000\n",
     "\n",
     "# Load QM9 dataset\n",
@@ -175,7 +175,7 @@
     "datahae = np.zeros((1))\n",
     "dataoae = np.zeros((1))\n",
     "datah = np.zeros((1,30))\n",
-    "for idx in range(9,10):\n",
+    "for idx in range(0,1):\n",
     "        \n",
     "    # load data for molecule\n",
     "    at, props = qm9data.get_properties(idx)\n",
@@ -220,18 +220,26 @@
     "        for j in range(30):\n",
     "            rows[i][j] = rep[0][i][j]\n",
     "            \n",
-    "#    from schnetpack.atomistic.output_modules import y\n",
-    "#    from schnetpack.atomistic.output_modules import yi\n",
-    "#    from schnetpack.atomistic.output_modules import result\n",
-    "#    from schnetpack.atomistic.output_modules import charges\n",
+    "    from schnetpack.atomistic.output_modules import y\n",
+    "    from schnetpack.atomistic.output_modules import yi\n",
+    "    from schnetpack.atomistic.output_modules import result\n",
+    "    from schnetpack.atomistic.output_modules import charges\n",
     "    \n",
-    "#    y=y.detach().numpy()\n",
+    "    charges = charges.detach().numpy()\n",
+    "    yi=yi.detach().numpy()\n",
     "#    \n",
-    "#    print(charges)\n",
-    "#    print(yi)\n",
-    "#    print(y)\n",
-    "#    print(result)\n",
+    "    print(charges[0][0])\n",
+    "    print(yi)\n",
+    "    print(y)\n",
+    "    print(result)\n",
     "    \n",
+    "    dip = np.zeros((number_of_atoms))\n",
+    "    for i in range(number_of_atoms):\n",
+    "        dip[i] = math.sqrt((yi[0][i][0])**2 + (yi[0][i][1])**2 + (yi[0][i][2])**2)\n",
+    "    \n",
+    "    print(dip)\n",
+    "            \n",
+    "        \n",
     "    #save the vector of every oxygen atom encountered\n",
     "    for i in range(number_of_atoms):\n",
     "        if props['_atomic_numbers'][i] == 8:\n",
@@ -241,10 +249,10 @@
     "            datah = np.vstack((datah,rows[i]))    \n",
     "    for i in range(number_of_atoms):\n",
     "        if props['_atomic_numbers'][i] == 1:\n",
-    "            datahae = np.vstack((datahae,yi[0][i]))\n",
+    "            datahae = np.vstack((datahae,dip[i]))\n",
     "    for i in range(number_of_atoms):\n",
     "        if props['_atomic_numbers'][i] == 8:\n",
-    "            dataoae = np.vstack((dataoae,yi[0][i]))            \n",
+    "            dataoae = np.vstack((dataoae,dip[i]))            \n",
     "\n"
    ]
   },
@@ -255,10 +263,10 @@
    "outputs": [],
    "source": [
     "print('DONE')            \n",
-    "savetxt('../../../data/dataO.csv',datao,delimiter=',')\n",
-    "savetxt('../../../data/dataH.csv',datah,delimiter=',')\n",
-    "savetxt('../../../data/hae.csv',datahae,delimiter=',')\n",
-    "savetxt('../../../data/oae.csv',dataoae,delimiter=',')"
+    "savetxt('../../../../data/dataO.csv',datao,delimiter=',')\n",
+    "savetxt('../../../../data/dataH.csv',datah,delimiter=',')\n",
+    "savetxt('../../../../data/hae.csv',datahae,delimiter=',')\n",
+    "savetxt('../../../../data/oae.csv',dataoae,delimiter=',')"
    ]
   },
   {
@@ -313,7 +321,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
