--- a/projects/extractembeddings/extractembeddings.ipynb
+++ b/projects/extractembeddings/extractembeddings.ipynb
@@ -20,7 +20,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "First, load trained model "
+    "1) First, load trained model "
    ]
   },
   {
