--- a/projects/extractembeddings/extractembeddings.ipynb
+++ b/projects/extractembeddings/extractembeddings.ipynb
@@ -20,7 +20,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1) First, load trained model "
+    "Step 1) Load trained model"
    ]
   },
   {
@@ -88,7 +88,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Define hook function for model layer extraction"
+    "Step 2) Define hook function for model layer extraction"
    ]
   },
   {
@@ -111,7 +111,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Extract embeddings from each layer in schnet "
+    "Step 3) Extract embeddings from each layer in schnet "
    ]
   },
   {
@@ -314,7 +314,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Run PCA on embedding/interaction data"
+    "Step 5) Run PCA/t-SNE dimension-reduction on embedding/interaction data"
    ]
   },
   {
@@ -433,7 +433,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Linear Discriminant Analysis"
+    "Step 6) Linear Discriminant Analysis to Classify Functional Group Labels from Embeddings"
    ]
   },
   {
