--- a/projects/extractembeddings/extractembeddings.ipynb
+++ b/projects/extractembeddings/extractembeddings.ipynb
@@ -140,6 +140,7 @@
     "column_headings.append('fg_gnuplotmarker')\n",
     "column_headings.append('fg_decimalcolor')\n",
     "column_headings.append('layer')\n"
+    "# There is also two more column headings: fg_key AND fg_hexcolor.BOTH are strings so they are added directly into pandas df"
    ]
   },
   {
