--- a/projects/extractembeddings/extractembeddings.ipynb
+++ b/projects/extractembeddings/extractembeddings.ipynb
@@ -284,7 +284,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Step 5A) Isolate embeddings of target atom-type(s) (element(s)) and layer(s)"
+    "Step 5A) Isolate embeddings of target element(s) and target layer(s)"
    ]
   },
   {
