--- a/gcnn_latentspace_chemistry/AIMNet_latentspace/extractembs.ipynb
+++ b/gcnn_latentspace_chemistry/AIMNet_latentspace/extractembs.ipynb
@@ -1,74 +1,26 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\aelsamma\\Anaconda3\\envs\\dlchem6\\lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
-   "source": [
-    "import sys\n",
-    "sys.path.append('..')\n",
-    "#WORKS ON TORCH==1.4.1, schnetpack == 0.3\n",
-    "from aimnet import load_AIMNetMT_ens, load_AIMNetSMD_ens\n",
-    "import ase\n",
-    "import ase.optimize\n",
-    "import ase.md\n",
-    "import numpy as np"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "### Load pre-trained esnsembles of AIMNet models\n",
-    "\n",
-    "load_AIMNetMT_ens - loads a model trained to wB97x/def2-TZVPP energies, atomic electric moments (charges, dipoles, etc) and volumes\n",
-    "\n",
-    "load_AIMNetSMD_ens - loads a model obtained by transfer learning towards SMD-wB97x/def2-TZVPP energies"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n"
-     ]
-    },
-    {
-     "ename": "OperationalError",
-     "evalue": "unable to open database file",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mOperationalError\u001b[0m                          Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_3812\\3067710977.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     37\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     38\u001b[0m     \u001b[1;31m#load properties of molecule\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 39\u001b[1;33m     \u001b[0matoms\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mprops\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mqm9_data\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget_properties\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmolecule_i\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     40\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     41\u001b[0m     \u001b[1;31m#convert\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mc:\\Users\\aelsamma\\Anaconda3\\envs\\dlchem6\\lib\\site-packages\\schnetpack\\data\\atoms.py\u001b[0m in \u001b[0;36mget_properties\u001b[1;34m(self, idx)\u001b[0m\n\u001b[0;32m    299\u001b[0m         \"\"\"\n\u001b[0;32m    300\u001b[0m         \u001b[0midx\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_subset_index\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0midx\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 301\u001b[1;33m         \u001b[1;32mwith\u001b[0m \u001b[0mconnect\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdbpath\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mconn\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    302\u001b[0m             \u001b[0mrow\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mconn\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0midx\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    303\u001b[0m         \u001b[0mat\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mrow\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtoatoms\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mc:\\Users\\aelsamma\\Anaconda3\\envs\\dlchem6\\lib\\site-packages\\ase\\db\\sqlite.py\u001b[0m in \u001b[0;36m__enter__\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    176\u001b[0m         \u001b[1;32massert\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mconnection\u001b[0m \u001b[1;32mis\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    177\u001b[0m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mchange_count\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 178\u001b[1;33m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mconnection\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_connect\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    179\u001b[0m         \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    180\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mc:\\Users\\aelsamma\\Anaconda3\\envs\\dlchem6\\lib\\site-packages\\ase\\db\\sqlite.py\u001b[0m in \u001b[0;36m_connect\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    171\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    172\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m_connect\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 173\u001b[1;33m         \u001b[1;32mreturn\u001b[0m \u001b[0msqlite3\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mconnect\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfilename\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtimeout\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m20\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    174\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    175\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m__enter__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mOperationalError\u001b[0m: unable to open database file"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import torch\n",
     "import schnetpack as spk\n",
     "from schnetpack.datasets import QM9\n",
+    "import sys\n",
+    "import ase\n",
+    "import ase.optimize\n",
+    "import ase.md\n",
+    "import numpy as np\n",
     "\n",
     "'''\n",
     "This code runs a pretrained AIMNet model on QM9 dataset and extract embeddings from it. SchNetPack here helps to load the QM9 dataset\n",
@@ -79,15 +31,20 @@
     "        QM9_RANGE               - range of QM9 data you want to extract embeddings of\n",
     "        AFV_N_FEATURES          - number of features for atomic feature vectors of the pretrained AIMNet model\n",
     "        AEF_N_FEATURES          - number of features for atomic environment vectors of the pretrained AIMNet model\n",
-    "\n",
+    "        load_AIMNetMT_ens       - loads trained AIMNet model on wB97x/def2-TZVPP energies, atomic electric moments (charges, dipoles, etc) and volumes\n",
+    "        load_AIMNetSMD_ens      - loads trained AIMNet model obtained by transfer learning towards SMD-wB97x/def2-TZVPP energies\n",
     "\n",
     "    Returns:\n",
-    "        AFV_EMBS                - initially empty np array, will hold the atomic feature vector embeddings of AIMNet as a numpy array of (n_data*n_features)\n",
-    "        AEF_EMBS                - initially empty np array, will hold the atomic environment vector embeddings of AIMNet as a numpy array of (n_data*n_features)\n",
+    "        afv_embs                - initially empty np array, will hold the atomic feature vector embeddings of AIMNet as a numpy array of (n_data*n_features)\n",
+    "        aef_embs                - initially empty np array, will hold the atomic environment vector embeddings of AIMNet as a numpy array of (n_data*n_features)\n",
+    "\n",
+    "NOTE the loaded version of AIMNet works on TORCH==1.4.0, if you do not have that version\n",
+    "please make a separate conda environment for AIMNet to avoid package conflicts with an updated torch!       \n",
     "'''\n",
     "\n",
+    "from aimnet import load_AIMNetMT_ens, load_AIMNetSMD_ens\n",
     "\n",
-    "QM9_FILEPATH = '../../data/datasets/QM9/qm9.db'\n",
+    "QM9_FILEPATH = '../data/datasets/QM9/qm9.db'\n",
     "QM9_RANGE = [0,10000]\n",
     "AFV_N_FEATURES = 16\n",
     "AEF_N_FEATUERS = 256\n",
@@ -140,13 +97,14 @@
     "    #load pretrained AIMNe model \n",
     "    model_gas = load_AIMNetMT_ens()\n",
     "\n",
-    "    #get prediction, atomic feature vectors, atomic environment vectors from \n",
+    "    #get prediction, atomic feature vectors, atomic environment vectors from AIMNet model\n",
     "    pred, afv, aef = model_gas(inputs['_positions'],atomic_numbers_in_idx)\n",
     "\n",
-    "    #\n",
+    "    #detach tensors to numpy array\n",
     "    afv = afv.detach().numpy()\n",
     "    aef = aef.detach().numpy()\n",
     "\n",
+    "    #stack embeddings of molecule to \n",
     "    afv_embs = np.vstack((afv_embs,afv[0]))\n",
     "    aef_embs = np.vstack((aef_embs,aef[0]))\n",
     "\n"
@@ -154,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
