gcnn_latentspace_restructure

--- a/gcnn_latentspace_chemistry/SchNet_latentspace/extractembs.ipynb
+++ b/gcnn_latentspace_chemistry/SchNet_latentspace/extractembs.ipynb
@@ -29,7 +29,7 @@
     "Extracting & labeling embeddings of QM9 using a pretrained SchNet model\n",
     "for all atoms in all molecules (specified in start,end)\n",
     "NOTE for this to work you must make embedding/interactions tensors in SchNet global \n",
-    "and as you test them, extract them\n",
+    "and as you test SchNet model, extract them through the global variable. I detail this in the README\n",
     "Heading of the saved file:\n",
     "\n",
     "'emb1, embs2, embs3, ...., mol_idx, atom_numb, coordx, coordy, coordz, ldalabel, gnumarker, deccolor, hexcolor, layer, atomizationE, fg_key'\n",
