--- a/1-latentspace_extract_analyze/AIMNet_latentspace/extractembs.ipynb
+++ b/1-latentspace_extract_analyze/AIMNet_latentspace/extractembs.ipynb
@@ -17,6 +17,8 @@
     "import ase.md\n",
     "import numpy as np\n",
     "\n",
+    "np.random.seed(42)\n",
+    "\n",
     "'''\n",
     "This code runs a pretrained AIMNet model on QM9 dataset and extract embeddings from it. SchNetPack here helps to load the QM9 dataset\n",
     "and also convert the db molecules to input ready for the AIMNet neural network\n",
