--- a/1-latentspace_extract_analyze/SchNet_latentspace/extractembs.ipynb
+++ b/1-latentspace_extract_analyze/SchNet_latentspace/extractembs.ipynb
@@ -23,6 +23,10 @@
    ],
    "source": [
     "from embeddings_latentspace import extract_embs_frompretrainedmodel\n",
+    "import numpy as np\n",
+    "\n",
+    "np.random.seed(42)\n",
+    "\n",
     "'''\n",
     "Last Updated: 2024-03-08\n",
     "\n",
