--- a/2-latentspace_activationpatch_transferlearn/activationpatching_sizeextnn_transferlearning.ipynb
+++ b/2-latentspace_activationpatch_transferlearn/activationpatching_sizeextnn_transferlearning.ipynb
@@ -31,6 +31,8 @@
     "import torch.nn.functional as F\n",
     "import pandas as pd\n",
     "\n",
+    "np.random.seed(44)\n",
+    "\n",
     "'''\n",
     "Last Modified: 2024/10/02\n",
     "\n",
