--- a/2-latentspace_activationpatch_transferlearn/activationpatching_transferlearning.ipynb
+++ b/2-latentspace_activationpatch_transferlearn/activationpatching_transferlearning.ipynb
@@ -14,6 +14,9 @@
    "outputs": [],
    "source": [
     "from utils import utils_transferlearn\n",
+    "import numpy as np\n",
+    "\n",
+    "np.random.seed(42)\n",
     "\n",
     "'''\n",
     "Initializes preprocessing of the training data and fit the scaler\n",
@@ -80,6 +83,9 @@
    "outputs": [],
    "source": [
     "from utils import utils_transferlearn\n",
+    "import numpy as np\n",
+    "\n",
+    "np.random.seed(42)\n",
     "\n",
     "'''\n",
     "Initializes preprocessing of the training data and fit the scaler\n",
