--- a/3-latentspace_reaction_transformer/rxns_latentspace.ipynb
+++ b/3-latentspace_reaction_transformer/rxns_latentspace.ipynb
@@ -16,6 +16,8 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
+    "np.random.seed(44)\n",
+    "\n",
     "'''\n",
     "Last Updated: 2024-03-19\n",
     "\n",
