--- a/4-latentspace_perturbationreplicate/pertreplicate.ipynb
+++ b/4-latentspace_perturbationreplicate/pertreplicate.ipynb
@@ -384,6 +384,9 @@
    ],
    "source": [
     "import pertreplicateveroncorr\n",
+    "import numpy as np\n",
+    "\n",
+    "np.random.seed(42)\n",
     "\n",
     "'''\n",
     "Perturbational replicate embedding fitting based on neighborhood composition embedding feature space\n",
