--- a/5-otherprojects/CNNonSMILES_torch/CNNonSMILES.ipynb
+++ b/5-otherprojects/CNNonSMILES_torch/CNNonSMILES.ipynb
@@ -31,6 +31,8 @@
     "import numpy as np\n",
     "import torch\n",
     "\n",
+    "np.random.seed(42)\n",
+    "\n",
     "'''\n",
     "This script processes molecular data in the form of SMILES strings and prepares it for machine learning models.\n",
     "The data is loaded from a CSV file and split into training and testing sets based on a \"split\" column.\n",
