--- a/5-otherprojects/geneticalgorithms_batteries/run-random-gen.ipynb
+++ b/5-otherprojects/geneticalgorithms_batteries/run-random-gen.ipynb
@@ -6,7 +6,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from autocombinatorial import build"
+    "from autocombinatorial import build\n",
+    "import numpy as np\n",
+    "\n",
+    "np.random.seed(42)"
    ]
   },
   {
